--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,9 @@ lerna-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
 .env.local
+.env.test
 
 # temp directory
 .temp
